// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MTreeNode Given a node When the node can and has children and the node is valid Should render correctly 1`] = `
<li class="m-tree-node">
    <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Node 3</span> </div>
    <m-accordion-transition>
        <ul class="m-tree-node__children" style="display:none;">
            <li class="m-tree-node m-tree-node__child">
                <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Node 4</span> </div>
                <m-accordion-transition>
                    <ul class="m-tree-node__children" style="display:none;">
                        <li class="m-tree-node__child-empty">
                            m-tree-node:empty
                        </li>
                    </ul>
                </m-accordion-transition>
            </li>
        </ul>
    </m-accordion-transition>
</li>
`;

exports[`MTreeNode Given a node When the node can have children but don't have any Should render correctly 1`] = `
<li class="m-tree-node">
    <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Node 2</span> </div>
    <m-accordion-transition>
        <ul class="m-tree-node__children" style="display:none;">
            <li class="m-tree-node__child-empty">
                m-tree-node:empty
            </li>
        </ul>
    </m-accordion-transition>
</li>
`;

exports[`MTreeNode Given a node When the node can't have children and the node is valid Should render correctly 1`] = `
<li class="m-tree-node">
    <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Node 1</span> </div>
</li>
`;

exports[`MTreeNode Given a node When the node has a checkbox Should render properly 1`] = `
<li class="m-tree-node">
    <div role="button" tabindex="1" class="m-tree-node__item m-tree-node__item--no-hover"> <span class="m-tree-node__item__label">Node 1</span>
        <div>checkbox</div>
    </div>
</li>
`;

exports[`MTreeNode Given a node When the node has a checkbox and auto-select is in button mode while current node is a parent and no node are selected Should render properly 1`] = `
<li class="m-tree-node">
    <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Parent 1</span>
        <m-checkbox></m-checkbox>
    </div>
    <m-accordion-transition>
        <ul class="m-tree-node__children" style="display:none;">
            <li class="m-tree-node m-tree-node__child">
                <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Child 1</span>
                    <m-checkbox></m-checkbox>
                </div>
                <m-accordion-transition>
                    <ul class="m-tree-node__children m-tree-node__line-extension" style="display:none;">
                        <li class="m-tree-node__child-empty">
                            m-tree-node:empty
                        </li>
                    </ul>
                </m-accordion-transition>
            </li>
            <li class="m-tree-node m-tree-node__child">
                <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Child 2</span>
                    <m-checkbox></m-checkbox>
                </div>
                <m-accordion-transition>
                    <ul class="m-tree-node__children" style="display:none;">
                        <li class="m-tree-node__child-empty">
                            m-tree-node:empty
                        </li>
                    </ul>
                </m-accordion-transition>
            </li>
        </ul>
    </m-accordion-transition>
    <button class="m-tree-node__auto-select-button"></button>
</li>
`;
